# lexroom-challenge

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
data/: week_current.json  week_previous.json
src/weekly_pulse/: config.py  main.py  models.py
src/weekly_pulse/analytics/: compute.py
src/weekly_pulse/delivery/: base.py  console.py  webhook.py
src/weekly_pulse/formatters/: base.py  slack.py
src/weekly_pulse/llm/: highlight.py
src/weekly_pulse/loaders/: base.py  json_loader.py
tests/: conftest.py  test_analytics.py  test_formatter.py  test_integration.py  test_loader.py
