[project]
name = "weekly-pulse-bot"
version = "0.1.0"
description = "Weekly product usage pulse bot with LLM-generated highlight."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "openai>=2.0",
  "httpx>=0.27",
]

[project.scripts]
weekly-pulse = "weekly_pulse.main:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weekly_pulse"]

[tool.pytest.ini_options]
filterwarnings = ["error"]
testpaths = ["tests"]